changes made for assetment

--- a/mychat/templates/mychat/lobby.html
+++ b/mychat/templates/mychat/lobby.html
@@ -15,7 +15,7 @@
 
     </div>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         let url = `ws://${window.location.host}/ws/socket-server`
         const chatScoket = new WebSocket(url)
         chatScoket.onmessage = function(e){
@@ -35,7 +35,7 @@
                 'message':message
             }))
             form.reset();
-        })
+        }) -->
 
 
     </script>
