--- a/mychat/templates/mychat/chat_room.html
+++ b/mychat/templates/mychat/chat_room.html
@@ -10,14 +10,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+
     <div class="container">
         <div class="row d-flex justify-content-center">
             <div class="col-6">
                 <form>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1" class="h4 pt-5">Chatroom</label>
-                        <textarea class="form-control" id="chat-text" rows="10"></textarea><br>
+                        <textarea class="form-control" readonly id="chat-text" rows="10"></textarea><br>
                     </div>
                     <div class="form-group">
                         <input class="form-control" id="input" type="text"></br>
@@ -60,7 +60,22 @@
         chatSocket.onmessage = function(e){
             const data = JSON.parse(e.data);
             console.log(data)
-            document.querySelector('#chat-text').value += (data.user_name + ':'  +data.message + '\n')
+            if (data.login_msg){
+                document.querySelector('#chat-text').value +=  (data.username + ':'  +" "+data.login_msg + '\n')
+            }
+            // console.log(data.login_msg)
+            else {
+                if (typeof(data.message) === 'object' && data.message !== null && !Array.isArray(data.message)) {
+                    console.log("The variable 'data' is a plain object."+data.message);
+                    data.message = JSON.stringify(data.message, null, 2); 
+                    document.querySelector('#chat-text').value += (data.user_name + ':'  +" "+data.message + '\n')
+                }
+                else
+                {
+                    console.log(typeof(data.message))
+                    document.querySelector('#chat-text').value += (data.user_name + ':'  +" "+data.message + '\n')
+                }
+            }
         }
     </script>
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
